<resources>
    <string name="app_name">Note Pad</string>

    <string name="oneNote">NoteView</string>
    <string name="addNoteButton">New note</string>
    <string name="mainHeader">My notes</string>
    <string name="CtxMenuHeader">Choose action</string>
    <string name="updateNoteButton">Update note</string>
    <string name="validation">Please fill the title and/or content field</string>

    <!-- createview layout -->
    <string name="noteTitle">Note\'s title</string>
    <string name="noteContent">Note\'s content</string>
    <string name="saveNoteButton">Save note</string>


    <!-- context menu options -->
    <string name="showNote">Show note</string>
    <string name="editNote">Edit note</string>
    <string name="removeNote">Remove note</string>

    <string name="titleHint">Enter title here</string>
    <string name="create_note">Create Note</string>
    <string name="search_hint">search_hint</string>



    <string name="date">Date:</string>
    <string name="back_arrow">back arrow</string>
    <string name="note_view">NOTE VIEW</string>
    <string name="deleteicon">deleteIcon</string>

</resources>
