<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:background="?attr/colorPrimary"
        android:layout_height="?attr/actionBarSize">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_alignParentLeft="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/backToolBar"
                android:clickable="true"
                android:layout_width="wrap_content"
                android:src="@mipmap/ic_arrow_back_48dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical|start"
                android:contentDescription="@string/back_arrow"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/backToolBar"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:text="@string/create_note"
                android:textSize="15sp"
                android:textColor="#ffffff"
                android:layout_height="wrap_content"
                tools:ignore="RelativeOverlap,RtlHardcoded" />

            <ImageView
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:id="@+id/saveNotesIV"
                android:layout_width="wrap_content"
                android:src="@android:drawable/ic_menu_save"
                android:layout_height="wrap_content"
                android:contentDescription="@string/saveNoteButton"
                tools:ignore="RtlHardcoded" />

        </RelativeLayout>


    </android.support.v7.widget.Toolbar>


    <ScrollView
        android:id="@+id/scrollView1"
        android:isScrollContainer="false"
        android:layout_width="fill_parent"
        android:fillViewport="true"
        android:layout_height="0dp"
        android:layout_weight="19">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noteTitle"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:imeOptions="actionNext"
                android:id="@+id/TitleEditText"
                android:maxLines="1"
                android:inputType="text"
                android:textSize="15sp"
                android:hint="@string/titleHint"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noteContent"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <view
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/body"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                class="com.example.devendranagar.halonotepad.LineEditText"
                android:background="@android:color/transparent"
                android:fadingEdge="vertical"
                android:gravity="top"
                android:padding="5dp"
                android:textStyle="normal"
                android:scrollbars="vertical"
                android:textSize="15sp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_gravity="bottom"
        android:background="#c9c6c6"
        android:layout_weight="2"
        android:id="@+id/addNoteToDB"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:text="@string/saveNoteButton" />

</LinearLayout>